--- a/packages/material-react-table/package.json
+++ b/packages/material-react-table/package.json
@@ -1,7 +1,7 @@
 {
-  "version": "1.14.0",
+  "version": "1.0.0",
   "license": "MIT",
-  "name": "material-react-table",
+  "name": "@ventureiq/material-react-table",
   "description": "A fully featured Material UI V5 implementation of TanStack React Table V8, written from the ground up in TypeScript.",
   "author": "Kevin Vandy",
   "keywords": [
