Revert "Auxiliary commit to revert individual files from 8ff5da220a43fb4c618f8e7d71a56e2c104a1dd3"
This reverts commit 2c6567bd5aeb81fea3fee7e28b2be7a44e6ef931.

--- a/packages/material-react-table/package.json
+++ b/packages/material-react-table/package.json
@@ -1,7 +1,7 @@
 {
-  "version": "1.0.0",
+  "version": "1.14.0",
   "license": "MIT",
-  "name": "@ventureiq/material-react-table",
+  "name": "material-react-table",
   "description": "A fully featured Material UI V5 implementation of TanStack React Table V8, written from the ground up in TypeScript.",
   "author": "Kevin Vandy",
   "keywords": [
